8149975: [packager] Programmatically Determine JDK or JRE Modules
Reviewed-by: kcr, ddhill